# py310

./: .gitignore  _trash.ipynb  myUtils.py  pyproject.toml  sch_test.ipynb  sch_test.py
.env/: my_api_key.env
Chromadb/: L1-student.ipynb  L1-student_02.ipynb  L1-student_03.ipynb  L1-student_04.ipynb  L1-student_05.ipynb  L1-student_06.ipynb  L2-student_01.ipynb  L3-student.ipynb  L3-student_01.ipynb  L3-student_02.ipynb  L3-student_03.ipynb  L3-student_06.ipynb  L4-student.ipynb  L4-student_01.ipynb  L5-student.ipynb  __projected_dataset_embeddings  __umap_transform  _embeddings  _projected_dataset_embeddings  _umap_transform  helper_utils_01.py  helper_utils_02.py
FastHTML/: .sesskey  main.py  main_1.py  tut.py
HTML CSS/: css_layout_n_position.css  css_layout_n_position.html  pseudo_classes_n_elements.css  pseudo_classes_n_elements.html  semantic.html  sematic.css
Youtube/: convert_audio_to_text.ipynb  test.ipynb  youtube_download_01.ipynb
bakersbench/: about.html  css_grid_gallery.html  index.html  nav_hero.html  style.css
db/: chroma.sqlite3
faq-chatbot/: app.py  chatbot.py  preprocess.py  trash.HTML  trash.js  trash.py
javascript/: index.html  index2.html  index3.html  main.js  main_2.js  main_3.js  style.css
karpathy/: neural_network_with_micrograd_n_pytorch.ipynb
langchain/: 01_document_loading.ipynb  01_document_loading_1.ipynb  01_document_loading_2.ipynb  01_document_loading_3.ipynb  01_document_loading_4.ipynb  01_document_loading_5.ipynb  01_document_loading_6.ipynb  01_document_loading_7.ipynb  02_document_splitting.ipynb  06_chat.ipynb  (+71 more)
(+216 files in other folders)
