[tool.poetry]
name = "py310"
version = "0.1.0"
description = ""
authors = ["pympk <yee_ping@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
chromadb = "^0.5.0"
llama-index = "^0.10.37"
openai = "^1.30.1"
streamlit = "^1.34.0"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.21.0"
yt-dlp = "^2024.4.9"
pydub = "^0.25.1"
langchain-community = "^0.2.0"
langchainhub = "^0.1.15"
llama-index-readers-web = "^0.1.17"
openpyxl = "^3.1.2"
ollama = "^0.2.0"
llama-index-llms-ollama = "^0.1.4"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-vector-stores-chroma = "^0.1.8"
matplotlib = "^3.9.0"
pytube = "^15.0.0"
pip = "^24.1"
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "v20231117" }
sentence-transformers = "^3.0.1"
ipywidgets = "^8.1.3"
umap-learn = "^0.5.6"
pytubefix = "^6.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
